--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,1 +1,11 @@
-login.erb
+Login!
+
+<form action="/login" method="post">
+<label for="username">username</label>
+<input type="text" name="username">
+<br>
+<label for="password">password</label>
+<input type="text" name="password">
+<br>
+<input type="submit" value="Login">
+</form>
