fill out sign up form

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,6 @@
 sign up!
 
-<form action="/signup" method="post">
+<form action="/users" method="post">
 <label for="username">username</label>
 <input type="text" name="username">
 <br>
