--- a/app/views/hikes/new.erb
+++ b/app/views/hikes/new.erb
@@ -1,6 +1,6 @@
 <h2>Create a Hike!</h2>
 
-<form action="hikes/new" method="post">
+<form action="/hikes/new" method="post">
 <label for="name"> Name: </label>
 <input type="text" name="name">
 <label for="difficulty"> Difficulty: </label>
