--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -1,5 +1,7 @@
 <h1> <%= @hike.name %> </h1>
 
+<a href="/hikes"><p>The Hikes</p></a>
+
 <h3> Difficulty <%= @hike.difficulty %> </h3>
 <h3> Rating <%= @hike.rating %> </h3>
 
