add text box on showhike page to leave comment

--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -12,3 +12,12 @@
 </form>
 
 <a href="/hikes/<%=@hike.id%>/edit">Edit Hike </a>
+
+<h2>add a comment</h2>
+
+<form action="/comments/new" method="post">
+
+<label for="content"> </label>
+<input type="text" name="content">
+<input type="submit" value="Submit">
+</form>
