--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -16,8 +16,11 @@
 <h2>add a comment</h2>
 
 <form action="/comments/new" method="post">
-
 <label for="content"> </label>
 <input type="text" name="content">
 <input type="submit" value="Submit">
 </form>
+
+<%@hike.comments.all.each do |comment|%>
+<p><%= comment.content%></p>
+<%end%>
