--- a/app/views/hikes/show_user_hikes.erb
+++ b/app/views/hikes/show_user_hikes.erb
@@ -1,7 +1,7 @@
-<h1>Your Hikes</h1>
+<h1><%= "#{@user.username.capitalize}"%>'s Hikes</h1>
 
 <% @hikes.each do |hike| %>
 <h2> <%= hike.name %> </h2>
-<h3> Difficulty <%= hike.difficulty %> </h3>
-<h3> Rating <%= hike.rating %> </h3>
+<h3> Difficulty: <%= hike.difficulty %> </h3>
+<h3> Rating: <%= hike.rating %> </h3>
 <%end%>
