fix new comment methods

--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -17,7 +17,7 @@
 
 <form action="/comments/new" method="post">
 <label for="content"> </label>
-<input type="text" name="hike_id" value=<%="#{@hike.id}"%>>
+<input type="hidden" name="hike_id" value=<%=@hike.id%>>
 <input type="text" name="content">
 <input type="submit" value="Submit">
 </form>
