--- a/app/views/hikes/show_hikes.erb
+++ b/app/views/hikes/show_hikes.erb
@@ -4,7 +4,7 @@
 
 <% Hike.all.each do |hike| %>
 <a href="/hikes/<%=hike.id%>"> <h2> <%= hike.name %> </h2> </a>
-<a href="/hikes/<%=hike.user.username%>"> <p> <%= hike.user.username %> </p> </a>
+<a href="/user/<%=hike.user.username%>"> <p> <%= hike.user.username %> </p> </a>
 <h3> Difficulty: <%= hike.difficulty %> </h3>
 <h3> Rating: <%= hike.rating %> </h3>
 <%end%>
