change login/signup password's input type from text to password

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -8,7 +8,7 @@ sign up!
 <input type="text" name="email">
 <br>
 <label for="password">password</label>
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
 <input type="submit" value="Sign up">
 </form>
