--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -5,7 +5,7 @@ Login!
 <input type="text" name="username">
 <br>
 <label for="password">password</label>
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
 <input type="submit" value="Login">
 </form>
