--- a/app/views/hikes/show_hikes.erb
+++ b/app/views/hikes/show_hikes.erb
@@ -1,7 +1,7 @@
 <h1>The Hikes</h1>
 
 <a href="/hikes/new"><h3>Create Hike</h3></a>
-
+<a href="/users/<%=current_user.username%>"><h3>My Hikes</h3></a>
 <% Hike.all.each do |hike| %>
 <a href="/hikes/<%=hike.id%>"> <h2> <%= hike.name %> </h2> </a>
 <a href="/user/<%=hike.user.username%>"> <p> <%= hike.user.username %> </p> </a>
