--- a/app/views/hikes/new.erb
+++ b/app/views/hikes/new.erb
@@ -3,9 +3,23 @@
 <form action="/hikes/new" method="post">
 <label for="name"> Name: </label>
 <input type="text" name="name">
+<br>
+<br>
+<label for="location">Location:</label>
+<input type="text" name="location">
+<br>
+<br>
 <label for="difficulty"> Difficulty: </label>
 <input type="text" name="difficulty">
+<br>
+<br>
 <label for="rating"> Rating: </label>
 <input type="text" name="rating">
-<input type="submit" value="Submit">
+<br>
+<br>
+<label for="description" id="new-hike-description-label">Description:</label>
+<textarea  name="description" cols="75" rows="10"></textarea>
+<br>
+<br>
+<input type="submit" id="create-hike-submit" value="Submit">
 </form>
