--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -1,7 +1,7 @@
 <a href="/hikes" id="the-hikes">The Hikes</a>
 
 <h1> <%= @hike.name %> </h1><h2><%=@hike.location%></h2>
-<p>created by <a href="/users/<%@hike.user.username%>"> <%="#{@hike.user.username}"%></a></p>
+<p>created by <a href="/users/<%=@hike.user.username%>"> <%="#{@hike.user.username}"%></a></p>
 <h3> Difficulty <%= @hike.difficulty %> </h3>
 <h3> Rating <%= @hike.rating %> </h3>
 
