--- a/app/views/hikes/show_hike.erb
+++ b/app/views/hikes/show_hike.erb
@@ -2,8 +2,8 @@
 
 <h1> <%= @hike.name %> </h1><h2><%=@hike.location%></h2>
 <p>created by <a href="/users/<%=@hike.user.username%>"> <%="#{@hike.user.username}"%></a></p>
-<h3> Difficulty <%= @hike.difficulty %> </h3>
-<h3> Rating <%= @hike.rating %> </h3>
+<h3> Difficulty: <%= @hike.difficulty %> </h3>
+<h3> Rating: <%= @hike.rating %> </h3>
 
 <div id="display-desciption">
 <%=@hike.description%>
