add option to sign up on login page

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,5 +1,6 @@
 Login!
-
+<br>
+<br>
 <form action="/login" method="post">
 <label for="username">username</label>
 <input type="text" name="username">
@@ -9,3 +10,5 @@ Login!
 <br>
 <input type="submit" value="Login">
 </form>
+<br>
+<p>dont have an account? Sign up <a href="/signup">here!</a></p>
