add option to login on sign up page

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,5 +1,6 @@
 sign up!
-
+<br>
+<br>
 <form action="/users" method="post">
 <label for="username">username</label>
 <input type="text" name="username">
@@ -12,3 +13,5 @@ sign up!
 <br>
 <input type="submit" value="Sign up">
 </form>
+<br>
+<p>already have an account? login in <a href="/login">here!</a></p>
