--- a/app/views/hikes/show_user_hikes.erb
+++ b/app/views/hikes/show_user_hikes.erb
@@ -3,8 +3,8 @@
 <% @hikes.each do |hike| %>
 <h1> <%= hike.name %> </h1><h2><%=hike.location%></h2>
 <p>created by <a href="/users/<%hike.user.username%>"> <%="#{hike.user.username}"%></a></p>
-<h3> Difficulty <%= hike.difficulty %> </h3>
-<h3> Rating <%= hike.rating %> </h3>
+<h3> Difficulty: <%= hike.difficulty %> </h3>
+<h3> Rating: <%= hike.rating %> </h3>
 <div id="display-desciption">
 <%=hike.description%>
 </div>
